// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Normalizer > should also normalize col & row totals in buckets 1`] = `
[
  {
    "items": [
      {
        "measure": {
          "definition": {
            "measureDefinition": {
              "item": {
                "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                "type": "measure",
              },
            },
          },
          "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
        },
      },
      {
        "measure": {
          "definition": {
            "measureDefinition": {
              "item": {
                "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                "type": "measure",
              },
            },
          },
          "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
        },
      },
    ],
    "localIdentifier": "bucket",
  },
  {
    "items": [
      {
        "attribute": {
          "displayForm": {
            "identifier": "f_owner.region_id",
            "type": "displayForm",
          },
          "localIdentifier": "a_f_owner.region_id",
        },
      },
      {
        "attribute": {
          "displayForm": {
            "identifier": "label.f_product.product.name",
            "type": "displayForm",
          },
          "localIdentifier": "a_label.f_product.product.name",
        },
      },
    ],
    "localIdentifier": "attribute",
    "totals": [
      {
        "attributeIdentifier": "a_label.f_product.product.name",
        "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
        "type": "sum",
      },
      {
        "attributeIdentifier": "a_label.f_product.product.name",
        "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
        "type": "max",
      },
    ],
  },
  {
    "items": [
      {
        "attribute": {
          "displayForm": {
            "identifier": "label.f_account.account.name",
            "type": "displayForm",
          },
          "localIdentifier": "a_label.f_account.account.name",
        },
      },
      {
        "attribute": {
          "displayForm": {
            "identifier": "label.f_owner.salesrep.ownername",
            "type": "displayForm",
          },
          "localIdentifier": "a_label.f_owner.salesrep.ownername",
        },
      },
    ],
    "localIdentifier": "columns",
    "totals": [
      {
        "attributeIdentifier": "a_label.f_owner.salesrep.ownername",
        "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
        "type": "sum",
      },
      {
        "attributeIdentifier": "a_label.f_owner.salesrep.ownername",
        "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
        "type": "avg",
      },
    ],
  },
]
`;

exports[`Normalizer > should normalize arithmetic measures 1`] = `
{
  "attributes": [],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "arithmeticMeasure": {
            "measureIdentifiers": [
              "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
              "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
            ],
            "operator": "difference",
          },
        },
        "localIdentifier": "m_9fa7cb9ce4d2947059b490e24a925317",
      },
    },
    {
      "measure": {
        "definition": {
          "arithmeticMeasure": {
            "measureIdentifiers": [
              "m_9fa7cb9ce4d2947059b490e24a925317",
              "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
            ],
            "operator": "ratio",
          },
        },
        "localIdentifier": "m_aebe46cecdb5eb3b5c069ce97a80535f",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize arithmetic measures when mixed between their operands 1`] = `
{
  "attributes": [],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "arithmeticMeasure": {
            "measureIdentifiers": [
              "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
              "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
            ],
            "operator": "difference",
          },
        },
        "localIdentifier": "m_9fa7cb9ce4d2947059b490e24a925317",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize arithmetic measures when mixed between their operands with keeping removable properties 1`] = `
{
  "attributes": [],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "alias": "Calculated 'Lost' measure",
        "definition": {
          "arithmeticMeasure": {
            "measureIdentifiers": [
              "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
              "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
            ],
            "operator": "difference",
          },
        },
        "localIdentifier": "m_9fa7cb9ce4d2947059b490e24a925317",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize arithmetic measures with keeping removable properties 1`] = `
{
  "attributes": [],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "alias": "Calculated 'Lost' measure",
        "definition": {
          "arithmeticMeasure": {
            "measureIdentifiers": [
              "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
              "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
            ],
            "operator": "difference",
          },
        },
        "localIdentifier": "m_9fa7cb9ce4d2947059b490e24a925317",
      },
    },
    {
      "measure": {
        "alias": "Ratio of Won and Lost",
        "definition": {
          "arithmeticMeasure": {
            "measureIdentifiers": [
              "m_9fa7cb9ce4d2947059b490e24a925317",
              "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
            ],
            "operator": "ratio",
          },
        },
        "localIdentifier": "m_aebe46cecdb5eb3b5c069ce97a80535f",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize derived measures 1`] = `
{
  "attributes": [],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "popMeasureDefinition": {
            "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
            "popAttribute": {
              "identifier": "dt_closedate_timestamp.year",
              "type": "attribute",
            },
          },
        },
        "localIdentifier": "m_m_e519fa2a_86c3_4e32_8313_0c03062348j3_dt_closedate_timestamp.year",
      },
    },
    {
      "measure": {
        "definition": {
          "previousPeriodMeasure": {
            "dateDataSets": [
              {
                "dataSet": {
                  "identifier": "dt_closedate_timestamp",
                },
                "periodsAgo": 1,
              },
            ],
            "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
        "localIdentifier": "m_m_e519fa2a_86c3_4e32_8313_0c03062348j3_previous_period",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize derived measures with keeping removable properties 1`] = `
{
  "attributes": [],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "alias": "Won Last Year",
        "definition": {
          "popMeasureDefinition": {
            "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
            "popAttribute": {
              "identifier": "dt_closedate_timestamp.year",
              "type": "attribute",
            },
          },
        },
        "localIdentifier": "m_m_e519fa2a_86c3_4e32_8313_0c03062348j3_dt_closedate_timestamp.year",
      },
    },
    {
      "measure": {
        "definition": {
          "previousPeriodMeasure": {
            "dateDataSets": [
              {
                "dataSet": {
                  "identifier": "dt_closedate_timestamp",
                },
                "periodsAgo": 1,
              },
            ],
            "measureIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
          },
        },
        "localIdentifier": "m_m_e519fa2a_86c3_4e32_8313_0c03062348j3_previous_period",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize duplicate attributes and measures 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "f_owner.region_id",
          "type": "displayForm",
        },
        "localIdentifier": "a_f_owner.region_id",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "f_owner.region_id",
          "type": "displayForm",
        },
        "localIdentifier": "a_f_owner.region_id_1",
      },
    },
  ],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_f_owner.region_id",
        "a_f_owner.region_id_1",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3_1",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize duplicate attributes and measures with keeping removable properties 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "f_owner.region_id",
          "type": "displayForm",
        },
        "localIdentifier": "a_f_owner.region_id",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "f_owner.region_id",
          "type": "displayForm",
        },
        "localIdentifier": "a_f_owner.region_id_1",
      },
    },
  ],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_f_owner.region_id",
        "a_f_owner.region_id_1",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3_1",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize measure value filters 1`] = `
{
  "attributes": [],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [],
    },
  ],
  "filters": [
    {
      "measureValueFilter": {
        "condition": {
          "comparison": {
            "operator": "EQUAL_TO",
            "value": 1,
          },
        },
        "measure": {
          "localIdentifier": "m_aebe46cecdb5eb3b5c069ce97a80535f",
        },
      },
    },
  ],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "definition": {
          "arithmeticMeasure": {
            "measureIdentifiers": [
              "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
              "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
            ],
            "operator": "difference",
          },
        },
        "localIdentifier": "m_9fa7cb9ce4d2947059b490e24a925317",
      },
    },
    {
      "measure": {
        "definition": {
          "arithmeticMeasure": {
            "measureIdentifiers": [
              "m_9fa7cb9ce4d2947059b490e24a925317",
              "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
            ],
            "operator": "ratio",
          },
        },
        "localIdentifier": "m_aebe46cecdb5eb3b5c069ce97a80535f",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize measure value filters with keeping removable properties 1`] = `
{
  "attributes": [],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [],
    },
  ],
  "filters": [
    {
      "measureValueFilter": {
        "condition": {
          "comparison": {
            "operator": "EQUAL_TO",
            "value": 1,
          },
        },
        "measure": {
          "localIdentifier": "m_aebe46cecdb5eb3b5c069ce97a80535f",
        },
      },
    },
  ],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
      },
    },
    {
      "measure": {
        "alias": "Calculated 'Lost' measure",
        "definition": {
          "arithmeticMeasure": {
            "measureIdentifiers": [
              "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
              "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
            ],
            "operator": "difference",
          },
        },
        "localIdentifier": "m_9fa7cb9ce4d2947059b490e24a925317",
      },
    },
    {
      "measure": {
        "alias": "Ratio of Won and Lost",
        "definition": {
          "arithmeticMeasure": {
            "measureIdentifiers": [
              "m_9fa7cb9ce4d2947059b490e24a925317",
              "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
            ],
            "operator": "ratio",
          },
        },
        "localIdentifier": "m_aebe46cecdb5eb3b5c069ce97a80535f",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize ranking filters 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "f_owner.region_id",
          "type": "displayForm",
        },
        "localIdentifier": "a_f_owner.region_id",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_f_owner.region_id",
        "a_label.f_product.product.name",
      ],
    },
  ],
  "filters": [
    {
      "rankingFilter": {
        "attributes": [
          {
            "localIdentifier": "a_f_owner.region_id",
          },
        ],
        "measure": {
          "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
        },
        "operator": "TOP",
        "value": 1,
      },
    },
  ],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize ranking filters with keeping removable properties 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "f_owner.region_id",
          "type": "displayForm",
        },
        "localIdentifier": "a_f_owner.region_id",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_f_owner.region_id",
        "a_label.f_product.product.name",
      ],
    },
  ],
  "filters": [
    {
      "rankingFilter": {
        "attributes": [
          {
            "localIdentifier": "a_f_owner.region_id",
          },
        ],
        "measure": {
          "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
        },
        "operator": "TOP",
        "value": 1,
      },
    },
  ],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize simple attributes and measures 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "f_owner.region_id",
          "type": "displayForm",
        },
        "localIdentifier": "a_f_owner.region_id",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_f_owner.region_id",
        "a_label.f_product.product.name",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "aggregation": "max",
            "item": {
              "identifier": "f_opportunitysnapshot.f_amount",
              "type": "fact",
            },
          },
        },
        "localIdentifier": "m_f_opportunitysnapshot.f_amount_max",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "computeRatio": true,
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050_ratio",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize simple attributes and measures with keeping removable properties 1`] = `
{
  "attributes": [
    {
      "attribute": {
        "displayForm": {
          "identifier": "f_owner.region_id",
          "type": "displayForm",
        },
        "localIdentifier": "a_f_owner.region_id",
      },
    },
    {
      "attribute": {
        "displayForm": {
          "identifier": "label.f_product.product.name",
          "type": "displayForm",
        },
        "localIdentifier": "a_label.f_product.product.name",
      },
    },
  ],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [
        "a_f_owner.region_id",
        "a_label.f_product.product.name",
      ],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "alias": "Max Amount",
        "definition": {
          "measureDefinition": {
            "aggregation": "max",
            "item": {
              "identifier": "f_opportunitysnapshot.f_amount",
              "type": "fact",
            },
          },
        },
        "localIdentifier": "m_f_opportunitysnapshot.f_amount_max",
      },
    },
    {
      "measure": {
        "alias": "Amount with Ratio",
        "definition": {
          "measureDefinition": {
            "computeRatio": true,
            "item": {
              "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050_ratio",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize simple measures with filters 1`] = `
{
  "attributes": [],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "filters": [
              {
                "negativeAttributeFilter": {
                  "displayForm": {
                    "identifier": "f_owner.region_id",
                    "type": "displayForm",
                  },
                  "notIn": {
                    "values": [
                      "East Coast",
                    ],
                  },
                },
              },
            ],
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3_9e3977eb",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;

exports[`Normalizer > should normalize simple measures with filters with keeping removable properties 1`] = `
{
  "attributes": [],
  "buckets": [],
  "dimensions": [
    {
      "itemIdentifiers": [
        "measureGroup",
      ],
    },
    {
      "itemIdentifiers": [],
    },
  ],
  "filters": [],
  "measures": [
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
      },
    },
    {
      "measure": {
        "definition": {
          "measureDefinition": {
            "filters": [
              {
                "negativeAttributeFilter": {
                  "displayForm": {
                    "identifier": "f_owner.region_id",
                    "type": "displayForm",
                  },
                  "notIn": {
                    "values": [
                      "East Coast",
                    ],
                  },
                },
              },
            ],
            "item": {
              "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
              "type": "measure",
            },
          },
        },
        "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3_9e3977eb",
      },
    },
  ],
  "postProcessing": {},
  "sortBy": [],
  "workspace": "test",
}
`;
